crates/oxc_css_parser/tests/error/scss/variable/missing-value.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ missing-value.scss:1:4
  │
1 │ $a:;
  │    ^


